--- a/chat/src/components/ChatsMenu.sass
+++ b/chat/src/components/ChatsMenu.sass
@@ -22,7 +22,8 @@
            padding: 10px 20px
         
         &-chats
-            font-family: $font
+            font-family: $font-main
+            font-weight: 400
             height: 100%
             overflow: auto
 
@@ -59,6 +60,6 @@
                     span
                         color: $white
                         font-size: 14px
-                        font-weight: bold
+                        font-weight: 400
                         letter-spacing: 1px
 
