--- a/chat/src/page/Client.sass
+++ b/chat/src/page/Client.sass
@@ -14,8 +14,8 @@
             
         .MuiTypography-h6
             color: #fff
-            font-family: $font
-            font-weight: 500
+            font-family: $font-main
+            font-weight: 400
     
 
     &-content
@@ -53,4 +53,5 @@
             background: $gray-ligth
 
         
-
+.MuiBackdrop-root 
+    background-color: $light-blue !important
