--- a/chat/src/utils/MyTableContol.sass
+++ b/chat/src/utils/MyTableContol.sass
@@ -16,8 +16,8 @@
 
         .MuiTypography-h6
             color: #fff
-            font-family: $font
-            font-weight: 500
+            font-family: $font-main
+            font-weight: 400
 
     &-chacked 
         display: flex
@@ -26,8 +26,8 @@
 
         span
             font-size: 18px
-            font-weight: 600
-            font-family: $font
+            font-weight: 500
+            font-family: $font-main
             white-space: nowrap
             width: 160px
 
