--- a/chat/src/AllColors.sass
+++ b/chat/src/AllColors.sass
@@ -19,5 +19,4 @@ $btn-color: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
 
 $transition: all .3s;
 
-$font: 'Oswald', sans-serif;
-$font2: 'Shippori Mincho B1', serif;
+$font-main: 'Roboto', sans-serif;
