--- a/chat/src/components/Messages.sass
+++ b/chat/src/components/Messages.sass
@@ -18,8 +18,8 @@
         align-items: center
         justify-content: center
         font-size: 16px
-        font-weight: normal
-        font-family: $font 
+        font-weight: 400
+        font-family: $font-main 
         letter-spacing: .5px
         color: $white
         padding: 5px 20px
@@ -35,7 +35,7 @@
         cursor: pointer
         color: $white
         font-size: 12px
-        font-weight: bold
+        font-weight: 400
         font-style: normal
         position: absolute
         top: 5px
