--- a/chat/src/components/SendMessageForm.sass
+++ b/chat/src/components/SendMessageForm.sass
@@ -10,9 +10,10 @@
         background: $gray-ligth
 
         textarea
-            font-family: $font !important
+            font-family: $font-main !important
+            font-weight: 400
             font-size: 16px
-            font-weight: normal
+            font-weight: 400
             letter-spacing: .5px
             padding: 0 10px
             color: $text-dark
@@ -27,7 +28,7 @@
         transition: all 1.3s
         font-size: 16px
         color: $white
-        font-weight: 600
+        font-weight: 400
         cursor: pointer
         height: 53px
         width: 10%
